<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gilbertosilva.lumbarpuncturesimulator.SimulationActivity"
    tools:showIn="@layout/activity_simulation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/simulationActivityTopLinearLayout"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/simulationActivityTopFragmentStepTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_fragment_step"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/simulationActivityTopFragmentStepMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_fragment_step_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteY="17dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/simulationActivityBottomLinearLayout"
        android:layout_below="@+id/simulationActivityTopLinearLayout">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/simulationActivityBottomLinearLayout"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3"
        android:background="#e3ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x_axis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/simulationActivityBottomFragmentXAxisTextView"
                    android:text="47" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y_axis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/simulationActivityBottomFragmentYAxisTextView"
                    android:text="-78" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_axis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/simulationActivityBottomFragmentZAxisTextView"
                    android:text="50" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/depth" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/simulationActivityBottomFragmentDepthTextView"
                    android:text="12.3cm" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="10dp">

            <ProgressBar
                android:id="@+id/simulationActivityBottomFragmentProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:progress="65"
                android:progressDrawable="@drawable/round_progressbar_progress" />

            <TextView
                android:id="@+id/simulationActivityBottomFragmentProgressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/simulationActivityBottomFragmentProgressBar"
                android:layout_alignEnd="@id/simulationActivityBottomFragmentProgressBar"
                android:layout_alignStart="@id/simulationActivityBottomFragmentProgressBar"
                android:layout_alignTop="@id/simulationActivityBottomFragmentProgressBar"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="65%" />

        </RelativeLayout>

    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical">-->

        <!--<fragment-->
            <!--android:id="@+id/simulationActivtyTopFragment"-->
            <!--android:name="com.example.gilbertosilva.lumbarpuncturesimulator.SimulationTopFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="3"/>-->

        <!--<fragment-->
            <!--android:id="@+id/simulationActivtyBottomFragment"-->
            <!--android:name="com.example.gilbertosilva.lumbarpuncturesimulator.SimulationBottomFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"/>-->

    <!--</LinearLayout>-->

</RelativeLayout>
