<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gilbertosilva.lumbarpuncturesimulator.SelectModeActivity"
    tools:showIn="@layout/activity_select_mode">

    <ImageButton
        android:id="@+id/selectModeActivityGuidedInfoButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/selectModeActivityGuidedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectModeActivityGuidedButton"
        app:layout_constraintTop_toTopOf="@+id/selectModeActivityGuidedButton"
        app:srcCompat="@drawable/ic_info_outline_red_24dp" />

    <ImageButton
        android:id="@+id/selectModeActivityTestInfoButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/selectModeActivityTestButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectModeActivityTestButton"
        app:layout_constraintTop_toTopOf="@+id/selectModeActivityTestButton"
        app:srcCompat="@drawable/ic_info_outline_red_24dp" />

    <Button
        android:id="@+id/selectModeActivityPracticeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="231dp"
        android:text="@string/simulation_button_practice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectModeActivityGuidedButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="167dp"
        android:text="@string/simulation_button_guided"
        app:layout_constraintBottom_toTopOf="@+id/selectModeActivityPracticeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectModeActivityTestButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="168dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:text="@string/simulation_button_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectModeActivityPracticeButton" />

    <ImageButton
        android:id="@+id/selectModeActivityPracticeInfoButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/selectModeActivityPracticeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectModeActivityPracticeButton"
        app:layout_constraintTop_toTopOf="@+id/selectModeActivityPracticeButton"
        app:srcCompat="@drawable/ic_info_outline_red_24dp" />

</android.support.constraint.ConstraintLayout>
